cleaning up the bibliography a bit; fix the havoc in the introduction

--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -140,3 +140,75 @@
  publisher = {ACM},
  address = {New York, NY, USA},
 }
+
+@article{dsl-survey,
+  title =	 {Domain-specific languages: An annotated
+                  bibliography},
+  author =	 {Van Deursen, A. and Klint, P. and Visser, J.},
+  journal =	 {ACM Sigplan Notices},
+  volume =	 {35},
+  number =	 {6},
+  pages =	 {26--36},
+  publisher =	 {ACM},
+  year =	 {2000}
+}
+
+@INPROCEEDINGS{hudak2,
+  author =	 {Hudak, P.},
+  booktitle =	 {Software Reuse, 1998. Proceedings. Fifth
+                  International Conference on},
+  title =	 {Modular domain specific languages and tools},
+  year =	 {1998},
+  month =	 jun,
+  volume =	 {},
+  number =	 {},
+  pages =	 {134 -142},
+  keywords =	 {Haskell;ML;domain specific embedded
+                  languages;functional languages;higher-order typed
+                  programming language;implementation
+                  code;methodology;modular domain specific
+                  languages;modular interpreters;program
+                  understanding;semantics;software
+                  maintenance;software reuse;software
+                  tools;syntax;functional languages;program
+                  interpreters;software reusability;software tools;},
+  doi =		 {10.1109/ICSR.1998.685738},
+  ISSN =	 {1085-9098},
+}
+@article{hudak1,
+ author = {Hudak, Paul},
+ title = {Building domain-specific embedded languages},
+ journal = {ACM Comput. Surv.},
+ issue_date = {Dec. 1996},
+ volume = {28},
+ number = {4es},
+ month = dec,
+ year = {1996},
+ issn = {0360-0300},
+ articleno = {196},
+ DOUBLEurl = {http://doi.acm.org/10.1145/242224.242477},
+ doi = {10.1145/242224.242477},
+ acmid = {242477},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+} 
+
+@article{coroutines,
+ author = {Conway, Melvin E.},
+ title = {Design of a separable transition-diagram compiler},
+ journal = {Commun. ACM},
+ issue_date = {July 1963},
+ volume = {6},
+ number = {7},
+ month = jul,
+ year = {1963},
+ issn = {0001-0782},
+ pages = {396--408},
+ numpages = {13},
+ OPTurl = {http://doi.acm.org/10.1145/366663.366704},
+ doi = {10.1145/366663.366704},
+ acmid = {366704},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+ notice = {coroutines}
+} 
