--- a/jabref.bib
+++ b/jabref.bib
@@ -8388,3 +8388,63 @@ year = {2000}
  OPTaddress = {New York, NY, USA},
  keywords = {algebraic semantics, compositionality, domain-specific languages, extensibility, pure embedding, scala},
 } 
+@inproceedings{Wallace:1995:LLP:224164.224213,
+  author =	 {Wallace, Malcolm and Runciman, Colin},
+  title =	 {Lambdas in the liftshaft---functional programming
+                  and an embedded architecture},
+  booktitle =	 {Proceedings of the 7\xth International Conference on
+                  Functional Programming Languages and Computer
+                  Architecture},
+  series =	 {FPCA '95},
+  year =	 {1995},
+  isbn =	 {0-89791-719-7},
+  OPTlocation =	 {La Jolla, California, United States},
+  pages =	 {249--258},
+  numpages =	 {10},
+  OPTurl =	 {http://doi.acm.org/10.1145/224164.224213},
+  doi =		 {10.1145/224164.224213},
+  acmid =	 {224213},
+  publisher =	 theacm,
+  OPTaddress =	 {New York, NY, USA},
+} 
+@article{Hall:1996:TCH:227699.227700,
+ author = {Hall, Cordelia V. and Hammond, Kevin and Peyton Jones, Simon L. and Wadler, Philip L.},
+ title = {Type classes in Haskell},
+ journal = {ACM Trans. Program. Lang. Syst.},
+ issue_date = {March 1996},
+ volume = {18},
+ number = {2},
+ month = mar,
+ year = {1996},
+ issn = {0164-0925},
+ pages = {109--138},
+ numpages = {30},
+ OPTurl = {http://doi.acm.org/10.1145/227699.227700},
+ doi = {10.1145/227699.227700},
+ acmid = {227700},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+ keywords = {Haskell, functional programming, type classes, types},
+}
+@incollection {springerlink:10.1007/978-3-642-25959-3_2,
+  author =	 {Bieniusa, Annette and Fuhrmann, Thomas},
+  affiliation =	 {Department for Computer Science, Universität
+                  Freiburg, Georges-Koehler-Allee 079, 79110 Freiburg,
+                  Germany},
+  title =	 {Lifting the Barriers --- Reducing Latencies with
+                  Transparent Transactional Memory},
+  booktitle =	 {Distributed Computing and Networking},
+  longseries =	 {Lecture Notes in Computer Science},
+  editor =	 {Bononi, Luciano and Datta, Ajoy and Devismes,
+                  Stéphane and Misra, Archan},
+  longpublisher ={Springer Berlin / Heidelberg},
+  publisher =	 s-v,
+  isbn =	 {978-3-642-25958-6},
+  keyword =	 {stm},
+  pages =	 {16--30},
+  longvolume =	 {7129},
+  series =	 {LNCS 7129},
+  OPTurl =	 {http://dx.doi.org/10.1007/978-3-642-25959-3_2},
+  doi =		 {10.1007/978-3-642-25959-3_2},
+  year =	 {2012}
+}
