--- a/content.tex
+++ b/content.tex
@@ -1,21 +1,26 @@
 \section{Introduction}
 
 Simulation is often used to inspect various characteristics of a system.
-In the SoOS project\footnote{See \url{www.example.com} for details.} we inspect service-oriented aspects of operating systems.
+In the SoOS project\footnote{See \url{http://www.soos-project.eu/} and \cite{soos} for details.} we inspect service-oriented aspects of operating systems.
 One part of the project requires to simulate the interactions between software components of an operating system (in the following: OS) and between
 OS and application software.
 
-To be more elaborate: While creating of new operating system concepts
-and regarding their interaction with the programmability of large-scale systems, we found that existing simulation packages do not seem to have the right abstractions for fast design exploration \cite{cotson,omnet}.
-This was the motivation for the S(o)OS project \cite{soos}.
+The main issue is: it is in fact not desirable to keep the whole, monolithic OS kernel on the each core of a  multicore machine. 
+For example, we could dedicate some cores to an application and some cores to an OS. 
+One possible approach to this is the partitioning of the address space. \olcomment{is this so?}
+In a simular manner, if we know that a core is occupied by a particular program, we can move the dynamic libraries, required for some other application to some other core's memory range.
+A further issue is the scalability of the parallel system. 
+Aforementioned ideas were the motivation for the S(o)OS project \cite{soos}.
 It aims to research OS concepts and specific OS modules, which aid in scalability of the complete software stack (both OS andapplication) on future many-core systems.
 One of the key concepts of S(o)OS is that only those OS modules needed by a application thread, are actually loaded into the (local) memory of a CPU core on which the thread will run.
 This execution environment differs from contemporary operating systems where every core runs a complete copy of the (monolithic) operating system.
 
+While creating of new operating system concepts and regarding their interaction with the programmability of large-scale systems, we found that existing simulation packages do not seem to have the right abstractions for fast design exploration \cite{cotson,omnet}.
 The ability to simulate separate components of the OS and of the application was the main goal to develop the OS simulator \soosim \olcomment{cite the WATERS paper if it is accepted until submission}.
 \olcomment{would be too cool to be true: \soosim is also available from Hackage.
 \footnote{Issue \cd{cabal install soosim} to install the simulator. See also:
 \url{www.example.com/soosim}.}}
+
 The design decisions were:
 \begin{itemize}
 \item To simulate all the communication between the components with message passing.
@@ -30,7 +35,7 @@ In the following we will show that using Haskell \cite{haskell-report} enabled u
 The contributions of this paper include:
 \begin{itemize}
 \item A short overview of the SoOS project
-\item The description of the eDSL used to implement \soosim
+\item The description of the embedded domain-specific language (eDSL) used to implement \soosim
 \item The list of Haskell language features, we found particulary useful in this project.
 \end{itemize}
 
@@ -135,7 +140,29 @@ Note, we are aiming at a high level of abstraction for the behavioural descripti
 
 \subsection{Interaction with the simulator}
 
+\begin{figure*}
+\centering
+\begin{code}
+createComponent :: Maybe NodeId      -- Node to create component on, Nothing for current
+                -> Maybe ComponentId -- ComponentId to set as parent, Nothing for self
+                -> String            -- Name of the registered component
+                -> SimM ComponentId  -- ComponentId of the created component
+
+-- | Synchronously invoke another component
+invoke :: Maybe ComponentId -- Caller, Nothing for current module
+       -> ComponentId       -- Callee
+       -> Dynamic           -- Argument
+       -> SimM Dynamic      -- Response from recipient
+
+...
+\end{code}
+\olcomment{Can we hide the \cd{Dynamic} somehow?}
+\caption{The interaction interface.}
+\label{fig:comp-types}
+\end{figure*}
+
 Components have several functions at their disposal to interact with the simulator and consequently interact with other components.
+We show the types of these functions in Figure~\ref{fig:comp-types}.
 The available functions are:
 
 \paragraph{\hs{createComponent}}
@@ -258,35 +285,41 @@ As one could infer from Figure~\ref{fig:code-simm}, the implementation makes use
 \section{Related Work}
 \label{sec:related-work}
 
+\paragraph{Operating systems and simulators.}
 \olcomment{Related work from WATERS paper + more!}
 
-\cite{house}
-\cite{final_tagless_embedding}
+\citeauthor{house} describe a basic operating system implementation in Haskell \cite{house}. 
+This work is in a sense dual to ours: we simulate an OS. 
+However, as we are also concerned with
 
-\cite{Hofer:2008:PED:1449913.1449935} --- compared to the work by
-\citeauthor{final_tagless_embedding} \cite{final_tagless_embedding} is
-more composable, allows subtyping, done in Scala
-\cite{odersky2008programming}. These two papers have different goals:
-\citeauthor{final_tagless_embedding} implement DSLs for higher-order languages, while \citeauthor{Hofer:2008:PED:1449913.1449935} focus on the possibility to plug in multiple implementations of an embedded DSL. \olcomment{pure embedded DSL, it if matters}
 
-\olcomment{cite: P. Hudak. Building domain-specific embedded languages. ACM Comput. Surv., 28(4), 1996.}
-\olcomment{cite: P. Hudak. Modular domain specific languages and tools. In P. Devanbu and J. Poulin, editors, Proceedings: Fifth International Conference on Software Reuse, pages 134–142. IEEE Computer Society Press, 1998. for pure embedding}
+\paragraph{Domain-specific languages.}
+For the concept of an eDSL see the papers by \citeauthor{hudak1} \cite{hudak1,hudak2}, the 1998 paper describes pure embedding.
+The literature on this topic is quite broad, an overview is presented, \eg by \citeauthor{dsl-survey} \cite{dsl-survey}.
+
+The final tagless embedding of DSLs originates from the seminal paper by \citeauthor{final_tagless_embedding} \cite{final_tagless_embedding}.
+\citeauthor{Hofer:2008:PED:1449913.1449935} \cite{Hofer:2008:PED:1449913.1449935} presented a paper that compared to the work by \citeauthor{final_tagless_embedding} \cite{final_tagless_embedding} is more composable, allows subtyping, and is done in Scala \cite{odersky2008programming}. 
+These two papers have different goals: \citeauthor{final_tagless_embedding} implement DSLs for higher-order languages, while \citeauthor{Hofer:2008:PED:1449913.1449935} focus on the possibility to plug in multiple implementations of a pure embedded DSL.
+
 
 \section{Conclusions and Future Work}
 \label{sec:concl-future-work}
 
 \paragraph{Conclusions.} \olcomment{What have we seen?}
-We have presented ....., and the techniques more commonly used in the
-programming language research were highly applicable for our purposes.
-We have demonstrated how the utilisation of final tagless eDSL contruction \cite{...}, type classes \cite{...}, monads \cite{...}, and coroutines \cite{...} facilitated an abstract and concise implementation of an operating system simulator.
+We have presented the efforts, required to implement \soosim, an OS simulator in Haskell.
+We note that the techniques more commonly used in the programming language research were highly applicable for our purposes.
+
+We have demonstrated how the utilisation of final tagless eDSL contruction \cite{final_tagless_embedding}, type classes \cite{Hall:1996:TCH:227699.227700}, monads \cite{haskell-report} \olcomment{no good cite, cite only Haskell report for both?}, and coroutines \cite{coroutines} facilitated an abstract and concise implementation of an operating system simulator.
 
 \paragraph{Real life simulations.}
-The major goal of the project is to simulate the behaviour of a real life application and to draw conclusions therefrom. This work is still ongoing.
+The major goal of the project is to simulate the behaviour of a real life application and to draw conclusions therefrom.
+This work is still ongoing.
 
 \paragraph{Concurrency.}
-One aspect of the future work is the concurrent \soosim. One option is to use Concurrent Haskell \cite{ConcHs}, it provides (concurrent) green threads.
+One aspect of the future work is the concurrent \soosim. 
+One option is to use Concurrent Haskell \cite{ConcHs}, it provides (concurrent) green threads.
 However, it would also require to use software transactional memory \cite{springerlink:10.1007/s004460050028} because of multiple writes to the same data.
-Examples of fruitful combinations of STM \olcomment{dirty style. either introduce properly or remove the acronym!} with other concepts include papers by \citeauthor{Harris:2008:CMT:1378704.1378725} \cite{Harris:2008:CMT:1378704.1378725} and \citeauthor{Bieniusa:2010:BAA:1835698.1835714} \cite{Bieniusa:2010:BAA:1835698.1835714}.
+Examples of fruitful combinations with other concepts include papers by \citeauthor{Harris:2008:CMT:1378704.1378725} \cite{Harris:2008:CMT:1378704.1378725} and \citeauthor{Bieniusa:2010:BAA:1835698.1835714} \cite{Bieniusa:2010:BAA:1835698.1835714,springerlink:10.1007/978-3-642-25959-3_2}.
 Another option would be to use a \emph{parallel} Haskell like Multicore Haskell \cite{marlow:rsm}, \cd{Par} monad \cite{par-monad} or Eden \cite{eden}.
 The ``multiple writes'' issue, however, needs some further handling in this case.
 
