Add system.svg picture

--- a/content.tex
+++ b/content.tex
@@ -80,8 +80,7 @@ A schematic overview of an example system can be seen in Figure~\ref{fig:system}
 
 \def\svgwidth{\columnwidth}
 \begin{figure}
-%\includesvg{system}
-\olcomment{graphics!!!}
+\includesvg{system}
 \caption{System, abstracted.}
 \label{fig:system}
 \end{figure}
