--- a/content.tex
+++ b/content.tex
@@ -142,28 +142,35 @@ Note, we are aiming at a high level of abstraction for the behavioural descripti
 
 \subsection{Interaction with the simulator}
 
-% \begin{figure*}
-% \centering
-% \begin{code}
-% createComponent ::
-%   Maybe NodeId            -- Node to create component on, Nothing for current
-%   -> Maybe ComponentId    -- ComponentId to set as parent, Nothing for self
-%   -> String               -- Name of the registered component
-%   -> SimM ComponentId     -- ComponentId of the created component
+\begin{figure*}
+\centering
+\olcomment{this takes too much space!}
+\begin{code}
+createComponent :: Maybe NodeId      -- Node to create component on, Nothing for current
+                -> Maybe ComponentId -- ComponentId to set as parent, Nothing for self
+                -> String            -- Name of the registered component
+                -> SimM ComponentId  -- ComponentId of the created component
 
-% -- | Synchronously invoke another component
-% invoke ::
-%   Maybe ComponentId    -- Caller, Nothing for current module
-%   -> ComponentId       -- Callee
-%   -> Dynamic           -- Argument
-%   -> SimM Dynamic      -- Response from recipient
+-- | Synchronously invoke another component
+invoke :: Maybe ComponentId -- Caller, Nothing for current module
+       -> ComponentId       -- Callee
+       -> Dynamic           -- Argument
+       -> SimM Dynamic      -- Response from recipient
 
-% ...
-% \end{code}
-% \olcomment{Can we hide the \cd{Dynamic} somehow?}
-% \caption{The interaction interface.}
-% \label{fig:comp-types}
-% \end{figure*}
+...
+\end{code}
+\olcomment{Can we hide the \cd{Dynamic} somehow? Seems like we can't.}
+
+\olcomment{variant 2 of the figure:}
+\begin{code}
+createComponent :: Maybe NodeId -> Maybe ComponentId -> String -> SimM ComponentId   -- Nothing is self
+
+-- Synchronously invokes another component
+invoke :: Maybe ComponentId -> ComponentId -> Dynamic -> SimM Dynamic  -- the invocation argument has to be like this
+\end{code}
+\caption{The interaction interface.}
+\label{fig:comp-types}
+\end{figure*}
 
 Components have several functions at their disposal to interact with the simulator and consequently interact with other components.
 % We show the types of these functions in Figure~\ref{fig:comp-types}.
