pdf for the figure

--- a/content.tex
+++ b/content.tex
@@ -77,9 +77,11 @@ The simulator poses no restrictions as to which components can communicate with 
 A user of \soosim would have to model those restrictions explicitly if required.
 A schematic overview of an example system can be seen in Figure~\ref{fig:system}.
 
-\def\svgwidth{\columnwidth}
+%\def\svgwidth{\columnwidth}
 \begin{figure}
-\includesvg{system}
+\centering
+%\includesvg{system}
+\includegraphics[width=0.7\linewidth]{system}
 \caption{System, abstracted.}
 \label{fig:system}
 \end{figure}
