--- a/soosim.tex
+++ b/soosim.tex
@@ -228,7 +228,7 @@ breaklines=true,basicstyle=\sffamily];#1;}
 %%
 % For graphics / images
 \usepackage{graphicx}
-\graphicspath{{img/}}
+\graphicspath{{img/},{images/}}
 
 %%
 % Prints a trailing space in a smart way.
