minor fix in references

--- a/jabref.bib
+++ b/jabref.bib
@@ -1803,7 +1803,7 @@
 }
 
 @INBOOK{haskell-types,
-  chapter = {Type classes in Haskell},
+  chapter = {Type classes in {Haskell}},
   pages = {241--256},
   title = {European Symposium On Programming},
   publisher = S-V,
@@ -8409,7 +8409,7 @@ year = {2000}
 } 
 @article{Hall:1996:TCH:227699.227700,
  author = {Hall, Cordelia V. and Hammond, Kevin and Peyton Jones, Simon L. and Wadler, Philip L.},
- title = {Type classes in Haskell},
+ title = {Type classes in {Haskell}},
  journal = {ACM Trans. Program. Lang. Syst.},
  issue_date = {March 1996},
  volume = {18},
