--- a/jabref.bib
+++ b/jabref.bib
@@ -8448,3 +8448,19 @@ year = {2000}
   doi =		 {10.1007/978-3-642-25959-3_2},
   year =	 {2012}
 }
+@inproceedings{Wadler:1990:CM:91556.91592,
+ author = {Wadler, Philip},
+ title = {Comprehending monads},
+ booktitle = {Proceedings of the 1990 ACM Conference on LISP and Functional Programming},
+ series = {LFP '90},
+ year = {1990},
+ isbn = {0-89791-368-X},
+ OPTlocation = {Nice, France},
+ pages = {61--78},
+ numpages = {18},
+ OPTurl = {http://doi.acm.org/10.1145/91556.91592},
+ doi = {10.1145/91556.91592},
+ acmid = {91592},
+ publisher = theacm,
+ OPTaddress = {New York, NY, USA},
+} 
